--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 03:05:23 2018</p>
+         Last Run: Thu Jul 12 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>21</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -72,9 +72,9 @@
                         <td>0</td>
                         <td>37</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -84,9 +84,9 @@
                         <td>1</td>
                         <td>44</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SE</td>
-                        <td>18</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
+                 "23",
                  "24",
                  "25",
-                 "24",
-                 "18"
+                 "25",
+                 "22"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 03:05:23 2018</p>
+         Last Run: Thu Jul 12 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -276,31 +276,31 @@
                         <td>2</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>65</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>14</td>
-                        <td>14</td>
+                        <td>13</td>
+                        <td>13</td>
                         <td>17</td>
-                        <td>60</td>
-                        <td>3</td>
+                        <td>62</td>
+                        <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>75</td>
+                        <td>74</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
+                        <td>15</td>
+                        <td>15</td>
                         <td>2</td>
-                        <td>50</td>
+                        <td>52</td>
                         <td>4</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>79</td>
+                        <td>77</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -308,23 +308,23 @@
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>81</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>15</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>78</td>
+                        <td>76</td>
                      </tr>
                   </tbody>
                </table>
@@ -371,10 +371,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "12",
-                 "14",
-                 "16",
+                 "13",
+                 "15",
                  "17",
-                 "19"
+                 "18"
                ]
              },
              {
@@ -384,10 +384,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "12",
-                 "14",
-                 "16",
+                 "13",
+                 "15",
                  "17",
-                 "19"
+                 "18"
                ]
              }
            ]
@@ -453,10 +453,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "60",
-                 "50",
-                 "43",
-                 "39"
+                 "62",
+                 "52",
+                 "44",
+                 "40"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "65",
-                 "75",
-                 "79",
-                 "81",
-                 "78"
+                 "66",
+                 "74",
+                 "77",
+                 "80",
+                 "76"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 03:05:23 2018</p>
+         Last Run: Thu Jul 12 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>55</td>
+                        <td>54</td>
                         <td>2</td>
                         <td>8</td>
                         <td>S</td>
@@ -522,7 +522,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>48</td>
+                        <td>47</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
@@ -534,11 +534,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -550,7 +550,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>14</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -690,9 +690,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "55",
-                 "48",
-                 "43",
+                 "54",
+                 "47",
+                 "42",
                  "38",
                  "35"
                ]
@@ -704,8 +704,8 @@
                "data":[
                  "1",
                  "5",
-                 "11",
-                 "14",
+                 "12",
+                 "15",
                  "12"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 03:05:23 2018</p>
+         Last Run: Thu Jul 12 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -776,7 +776,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -906,7 +906,7 @@
                "data":[
                  "4",
                  "7",
-                 "12"
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 03:05:23 2018</p>
+         Last Run: Thu Jul 12 04:05:23 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -948,7 +948,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
@@ -956,11 +956,11 @@
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of a Thunderstorm</td>
+                        <td>Partly Cloudy</td>
                         <td>23</td>
                         <td>23</td>
-                        <td>30</td>
-                        <td>43</td>
+                        <td>24</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
@@ -971,8 +971,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>37</td>
-                        <td>50</td>
+                        <td>36</td>
+                        <td>48</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
@@ -1085,8 +1085,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "30",
-                 "37"
+                 "24",
+                 "36"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
-                 "43",
-                 "50"
+                 "36",
+                 "41",
+                 "48"
                ]
              },
              {
