--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 05:05:23 2018</p>
+         Last Run: Thu Jul 12 06:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>24</td>
                      </tr>
@@ -58,11 +58,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>25</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>25</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>SE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                   </tbody>
                </table>
@@ -216,7 +216,7 @@
                "data":[
                  "36",
                  "35",
-                 "33",
+                 "34",
                  "37",
                  "44"
                ]
@@ -228,9 +228,9 @@
                "data":[
                  "23",
                  "24",
-                 "25",
-                 "25",
-                 "22"
+                 "23",
+                 "24",
+                 "23"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 05:05:23 2018</p>
+         Last Run: Thu Jul 12 06:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,60 +271,60 @@
                         <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>24</td>
+                        <td>6</td>
                         <td>70</td>
                         <td>2</td>
                         <td>16</td>
                         <td>NNW</td>
-                        <td>66</td>
+                        <td>64</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
                         <td>13</td>
                         <td>13</td>
-                        <td>17</td>
-                        <td>62</td>
+                        <td>3</td>
+                        <td>61</td>
                         <td>4</td>
                         <td>14</td>
                         <td>NNW</td>
-                        <td>74</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>2</td>
-                        <td>52</td>
-                        <td>4</td>
+                        <td>0</td>
+                        <td>51</td>
+                        <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>77</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
                         <td>15</td>
                         <td>44</td>
-                        <td>4</td>
+                        <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>80</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
                         <td>15</td>
                         <td>40</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>76</td>
+                        <td>53</td>
                      </tr>
                   </tbody>
                </table>
@@ -440,9 +440,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "24",
-                 "17",
-                 "2",
+                 "6",
+                 "3",
+                 "0",
                  "15",
                  "15"
                ]
@@ -453,8 +453,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "70",
-                 "62",
-                 "52",
+                 "61",
+                 "51",
                  "44",
                  "40"
                ]
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "66",
-                 "74",
-                 "77",
-                 "80",
-                 "76"
+                 "64",
+                 "67",
+                 "65",
+                 "56",
+                 "53"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 05:05:23 2018</p>
+         Last Run: Thu Jul 12 06:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -512,7 +512,7 @@
                         <td>0</td>
                         <td>54</td>
                         <td>2</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>S</td>
                         <td>1</td>
                      </tr>
@@ -534,11 +534,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>4</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -562,7 +562,7 @@
                         <td>7</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>12</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -692,7 +692,7 @@
                "data":[
                  "54",
                  "47",
-                 "42",
+                 "43",
                  "38",
                  "35"
                ]
@@ -704,9 +704,9 @@
                "data":[
                  "1",
                  "5",
-                 "12",
+                 "11",
                  "15",
-                 "12"
+                 "14"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 05:05:23 2018</p>
+         Last Run: Thu Jul 12 06:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -776,7 +776,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -906,7 +906,7 @@
                "data":[
                  "4",
                  "7",
-                 "13"
+                 "12"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 05:05:23 2018</p>
+         Last Run: Thu Jul 12 06:05:24 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
