--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 06:05:24 2018</p>
+         Last Run: Thu Jul 12 07:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>23</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -82,9 +82,9 @@
                         <td>22</td>
                         <td>22</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SE</td>
                         <td>23</td>
                      </tr>
@@ -218,7 +218,7 @@
                  "35",
                  "34",
                  "37",
-                 "44"
+                 "43"
                ]
              },
              {
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
+                 "27",
                  "24",
-                 "23",
-                 "24",
+                 "19",
+                 "21",
                  "23"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 06:05:24 2018</p>
+         Last Run: Thu Jul 12 07:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -274,9 +274,9 @@
                         <td>6</td>
                         <td>70</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>64</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -464,7 +464,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "64",
+                 "65",
                  "67",
                  "65",
                  "56",
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 06:05:24 2018</p>
+         Last Run: Thu Jul 12 07:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -507,12 +507,12 @@
                      <tr>
                         <td>09:00 AM</td>
                         <td>Clear</td>
-                        <td>15</td>
-                        <td>15</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>1</td>
                      </tr>
@@ -526,7 +526,7 @@
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>38</td>
+                        <td>39</td>
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,11 +558,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>36</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>14</td>
+                        <td>SE</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -608,7 +608,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
                  "19",
                  "21",
@@ -621,7 +621,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "15",
+                 "16",
                  "18",
                  "19",
                  "21",
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
+                 "55",
                  "47",
                  "43",
-                 "38",
-                 "35"
+                 "39",
+                 "36"
                ]
              },
              {
@@ -703,10 +703,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "1",
-                 "5",
+                 "4",
                  "11",
-                 "15",
-                 "14"
+                 "14",
+                 "13"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 06:05:24 2018</p>
+         Last Run: Thu Jul 12 07:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -752,7 +752,7 @@
                         <td>2</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -762,9 +762,9 @@
                         <td>0</td>
                         <td>30</td>
                         <td>1</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>SE</td>
-                        <td>7</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -774,9 +774,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>0</td>
-                        <td>16</td>
-                        <td>SE</td>
-                        <td>12</td>
+                        <td>18</td>
+                        <td>ESE</td>
+                        <td>22</td>
                      </tr>
                   </tbody>
                </table>
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "7",
-                 "12"
+                 "3",
+                 "17",
+                 "22"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 12 06:05:24 2018</p>
+         Last Run: Thu Jul 12 07:05:21 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -944,15 +944,15 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>24</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>1</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>23</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -960,19 +960,19 @@
                         <td>23</td>
                         <td>23</td>
                         <td>24</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>35</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>36</td>
-                        <td>48</td>
+                        <td>39</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>14</td>
                         <td>E</td>
@@ -1086,7 +1086,7 @@
                "data":[
                  "24",
                  "24",
-                 "36"
+                 "39"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "41",
-                 "48"
+                 "37",
+                 "42",
+                 "50"
                ]
              },
              {
@@ -1104,8 +1104,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "35",
+                 "31",
+                 "42",
                  "50"
                ]
              }
